--- a/Projeto-Markup/style.css
+++ b/Projeto-Markup/style.css
@@ -6,6 +6,11 @@
     
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Open Sans', Helvetica, sans-serif;
     font-weight: bold;
@@ -14,41 +19,76 @@ body {
     background-attachment: fixed;
 }
 
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.493);
+}
+
+main {
+    min-height: 100vh;
+}
+
 select {
     margin-top: 10px;
-    margin-block-end: 10px;
+    margin-bottom: 10px;
     border-radius: 3px;
     width: 450px;
+    padding: 10px;
+    background-color: #97b2614b;
 }
 
 section {
-    display: inline-block;
-    height: auto;
+    text-align: left;
     background: white;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 15px;
     width: 450px;
-    margin-top: 10px;
+    height: 450px;
+    margin: 5px;
     box-shadow: 4px 4px 15px #1c2c21;
 }
 
 input {
     font-weight: bold;
     background-color: #97b2614b;
-    border-radius: 6px;
+    border-radius: 4px;
     width: 150px; 
     margin-top: 5px;
     margin-bottom: 5px;   
 }
 
 h1 {
-    background-color: white;
     text-align: center;
-    border-radius: 10px;
     width: auto;
 }
 
-span {
+h2 {
+    font-weight: bold;
+}
+
+p {
+    padding-top: 3px;
+}
+
+label {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+footer {
+    background-color: white;
+    border-top: 1px solid black;
+    width: 100%;
+    height: 60px;
+}
+
+.res3 {
     display: block;
 }
 
@@ -62,6 +102,16 @@ span {
     box-shadow: 1px 3px 4px #1c2c216b;
 }
 
-.sectionsEspeciais {
-   padding-top: 41px;
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* .precoVenda {
+    
+} */
+
+.spacing {
+    padding: 30px;
 }
